# taxi_demand_predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml  training_pipeline.yaml
data/transformed/: locations.csv
model/: nyc_taxi_pipe_model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  01_transform_rawdata_into_features_and_target.ipynb  02_baseline_model.ipynb  02_transform_rawdata_into_timeseriesdata.ipynb  03_transform_timeseriesdata_into_trainingdata .ipynb  03_xgboost_model.ipynb  04_lightgbm_model.ipynb  05_lightgbm_model_with_feature_engineering_pipeline.ipynb  06_lightgbm_model_with_hyperparameter_tuning.ipynb  07_lightgbm_model_final.ipynb  08_backfill_feature_store_hopsworks.ipynb  09_feature_pipeline.ipynb  10_model_training.ipynb  10_model_training_pipeline.ipynb  11_model_predictions.ipynb  11_model_training_pipeline.ipynb  12_model_predictions.ipynb
notebooks/.ipynb_checkpoints/: 01_transform_rawdata_into_features_and_target-checkpoint.ipynb  02_transform_rawdata_into_timeseriesdata-checkpoint.ipynb  03_transform_timeseriesdata_into_trainingdata -checkpoint.ipynb  F_01_Data_Pipeline_rawdata_to_trainingdata-checkpoint.ipynb  Step_1_Transform_RawData_into_Features_and_Targets-checkpoint.ipynb
src/: config.py  data.py  data_split.py  frontend.py  model.py  paths.py  visual.py
