[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Resh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "1.5.3"
pyarrow = "^13.0.0"
fastparquet = "^2023.8.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
